--- a/index.css
+++ b/index.css
@@ -1,11 +1,10 @@
 ﻿@font-face {
-    font-family: PatagoniaMedium;
-    src: url(fonts/PatagoniaMedium.ttf);
+  font-family: PatagoniaMedium;
+  src: url(fonts/PatagoniaMedium.ttf);
 }
-
 @font-face {
-    font-family: SolitasSlab;
-    src: url(fonts/SolitasSlab.woff);
+  font-family: SolitasSlab;
+  src: url(fonts/SolitasSlab.woff);
 }
 html {
   -webkit-font-smoothing: antialiased;
@@ -19,6 +18,8 @@ a {
 }
 ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 body {
   margin: 0;
@@ -43,22 +44,6 @@ footer {
   height: auto;
   width: 100%;
 }
-button {
-  width: 23%;
-  margin: 0 1%;
-  height: inherit;
-  background-color: transparent;
-  border: none;
-  font-size: 1.3em;
-  font-family: SolitasSlab;
-  text-transform: uppercase;
-  background-color: #282828;
-  color: white;
-}
-button:hover {
-  background-color: #0e83cd;
-  cursor: pointer;
-}
 #board {
   position: relative;
   margin: 10px auto;
@@ -70,7 +55,7 @@ button:hover {
   text-align: center;
   color: white;
   font-family: PatagoniaMedium;
-  background-color: #0e83cd;
+  background-color: #0E83CD;
 }
 .tile:hover {
   background-color: #30a5ef;
@@ -85,7 +70,7 @@ button:hover {
 }
 .tile-moveable:hover {
   background-color: white;
-  color: #0e83cd;
+  color: #0E83CD;
   cursor: pointer;
 }
 .container-content {
@@ -105,12 +90,12 @@ nav li {
 }
 #nav-main li a {
   padding: 10px 20px;
-  color: #0e83cd;
+  color: #0E83CD;
   font-size: 1em;
-  border: 2px solid #0e83cd;
+  border: 2px solid #0E83CD;
 }
 #nav-main li a:hover {
-  background-color: #0e83cd;
+  background-color: #0E83CD;
   color: white;
 }
 #board-bottom-panel {
@@ -118,14 +103,8 @@ nav li {
   line-height: 30px;
   margin: 0 auto;
 }
-#button-shuffle {
-  width: 20%;
-  display: inline-block;
-  float: right;
-  vertical-align: middle;
-}
 #movescounter {
-  width: 23%;
+  width: 21%;
   display: inline-block;
   float: left;
   vertical-align: middle;
@@ -154,10 +133,71 @@ nav li {
   cursor: pointer;
 }
 .board-side-option:hover {
-  background-color: #0e83cd;
+  background-color: #0E83CD;
 }
 .board-side-option.selected {
   color: #282828;
   background-color: white;
   cursor: default;
+}
+#help-wrapper {
+  margin: 0;
+  padding: 0;
+}
+#help {
+  width: 5%;
+  display: inline-block;
+  float: left;
+  text-align: center;
+  margin-left: 1%;
+}
+#help:hover {
+  background-color: white;
+  cursor: help;
+}
+#help-wrapper .tooltip {
+  top: 0;
+  right: 0;
+  color: white;
+  background: #282828;
+  opacity: 0;
+  padding: 0 8px;
+  pointer-events: none;
+  position: absolute;
+  -webkit-transform: translateY(10px);
+  -moz-transform: translateY(10px);
+  -ms-transform: translateY(10px);
+  -o-transform: translateY(10px);
+  transform: translateY(10px);
+  -webkit-transition: all 0.25s ease-out;
+  -moz-transition: all 0.25s ease-out;
+  -o-transition: all 0.25s ease-out;
+  transition: all 0.2s ease-out;
+  -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+}
+#help-wrapper:hover .tooltip {
+  opacity: 1;
+  pointer-events: auto;
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  -o-transform: translateY(0px);
+  transform: translateY(0px);
+}
+#button-shuffle {
+  width: 21%;
+  margin-left: 1%;
+  height: inherit;
+  border: none;
+  font-size: 1.3em;
+  font-family: SolitasSlab;
+  text-transform: uppercase;
+  color: white;
+  background-color: #282828;
+}
+#button-shuffle:hover {
+  background-color: #0E83CD;
+  cursor: pointer;
 }
