--- a/index.less
+++ b/index.less
@@ -1,8 +1,16 @@
-﻿@import (inline) "fonts.css";
+﻿@font-face {
+    font-family: PatagoniaMedium;
+    src: url(fonts/PatagoniaMedium.ttf);
+}
+
+@font-face {
+    font-family: SolitasSlab;
+    src: url(fonts/SolitasSlab.woff);
+}
 
 @black: #282828;
 
-@content-background: #EFD26C;
+@content-background: #efd26c;
 @tile-color: #0E83CD;
 
 @header-background: #f9f9f9;
@@ -25,6 +33,8 @@ a {
 
 ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -53,24 +63,7 @@ footer {
     width: 100%;
 }
 
-button {
-    width: 23%;
-   margin: 0 1%;
-     height: inherit;
-    background-color: transparent;
-    border: none;
-    font-size: 1.3em;
-    font-family: @font-body;
-    text-transform: uppercase;
 
-        background-color: @black;
-        color: white;
-
-    &:hover {
-        background-color: @tile-color;
-        cursor: pointer;
-    }
-}
 
 #board {
     position: relative;
@@ -148,15 +141,8 @@ nav li {
     margin: 0 auto;
 }
 
-#button-shuffle {
-    width: 20%;
-    display: inline-block;
-    float: right;
-    vertical-align: middle;
-}
-
 #movescounter {
-    width: 23%;
+    width: 21%;
     display: inline-block;
     float: left;
     vertical-align: middle;
@@ -188,7 +174,7 @@ nav li {
     text-align: center;
     cursor: pointer;
 
-    &:hover{
+    &:hover {
         background-color: @tile-color;
     }
 
@@ -196,5 +182,73 @@ nav li {
         color: @black;
         background-color: white;
         cursor: default;
+    }
+}
+
+#help-wrapper {
+    margin: 0;
+    padding: 0;
+}
+
+#help {
+    width: 5%;
+    display: inline-block;
+    float: left;
+    text-align: center;
+    margin-left: 1%;
+
+    &:hover {
+        background-color: white;
+        cursor: help;
+    }
+}
+
+#help-wrapper .tooltip {
+    top: 0;
+    right: 0;
+    color: white;
+    background: @black;
+    opacity: 0;
+    padding: 0 8px;
+    pointer-events: none;
+    position: absolute;
+    -webkit-transform: translateY(10px);
+    -moz-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    -o-transform: translateY(10px);
+    transform: translateY(10px);
+    -webkit-transition: all 0.25s ease-out;
+    -moz-transition: all 0.25s ease-out;
+    -o-transition: all 0.25s ease-out;
+    transition: all 0.2s ease-out;
+    -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+    -moz-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+}
+
+#help-wrapper:hover .tooltip {
+    opacity: 1;
+    pointer-events: auto;
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    -o-transform: translateY(0px);
+    transform: translateY(0px);
+}
+
+#button-shuffle {
+    width: 21%;
+    margin-left: 1%;
+    height: inherit;
+    border: none;
+    font-size: 1.3em;
+    font-family: @font-body;
+    text-transform: uppercase;
+    color: white;
+    background-color: @black;
+
+    &:hover {
+        background-color: @tile-color;
+        cursor: pointer;
     }
 }
